Create a model for list of accounts #9

--- a/src/TF.Tests/TF.Tests.csproj
+++ b/src/TF.Tests/TF.Tests.csproj
@@ -26,4 +26,11 @@
     <ProjectReference Include="..\TF.Models\TF.Models.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Using Include="AutoFixture" />
+    <Using Include="FluentAssertions" />
+    <Using Include="NSubstitute" />
+    <Using Include="Xunit" />
+  </ItemGroup>  
+
 </Project>
