--- a/src/TF.Models/TF.Models.csproj
+++ b/src/TF.Models/TF.Models.csproj
@@ -1,3 +1,12 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
+  <ItemGroup>
+    <PackageReference Include="System.Collections.Immutable" Version="6.0.0-rc.2.21480.5" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Using Include="System.Collections" />
+    <Using Include="System.Collections.Generic" />
+    <Using Include="System.Collections.Immutable" />
+  </ItemGroup>
 
 </Project>
