--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -19,8 +19,8 @@ jobs:
         dotnet-version: 6.0.x
         include-prerelease: true
     - name: Restore dependencies
-      run: dotnet restore
+      run: dotnet restore src/FT.sln
     - name: Build
-      run: dotnet build --no-restore
+      run: dotnet build  src/FT.sln --no-restore
     - name: Test
-      run: dotnet test --no-build --verbosity normal
+      run: dotnet test  src/FT.sln --no-build --verbosity normal
