--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -21,15 +21,17 @@ jobs:
       with:
         dotnet-version: ${{ matrix.dotnet-version }}
         include-prerelease: true
+    - name: Display the path
+      run: |
+        echo $PATH
+        ls -s
+      shell: bash
     - name: Restore dependencies
-      run: dotnet restore FT.sln
-      working-directory: ./src
+      run: dotnet restore ./src/FT.sln
     - name: Build
-      run: dotnet build FT.sln --no-restore
-      working-directory: ./src
+      run: dotnet build ./src/FT.sln --no-restore
     - name: Test
-      run: dotnet test FT.sln --no-build --verbosity normal --logger trx --results-directory "TestResults-${{ matrix.dotnet-version }}"
-      working-directory: ./src
+      run: dotnet test ./src/FT.sln --no-build --verbosity normal --logger trx --results-directory "TestResults-${{ matrix.dotnet-version }}"
     - name: Upload dotnet test results
       uses: actions/upload-artifact@v2
       with:
