--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -27,11 +27,13 @@ jobs:
         cd src
       shell: bash
     - name: Restore dependencies
-      run: dotnet restore FT.sln
+      run: |
+        ls -s
+        dotnet restore ./FT.sln
     - name: Build
-      run: dotnet build FT.sln --no-restore
+      run: dotnet build ./FT.sln --no-restore
     - name: Test
-      run: dotnet test FT.sln --no-build --verbosity normal --logger trx --results-directory "TestResults-${{ matrix.dotnet-version }}"
+      run: dotnet test ./FT.sln --no-build --verbosity normal --logger trx --results-directory "TestResults-${{ matrix.dotnet-version }}"
     - name: Upload dotnet test results
       uses: actions/upload-artifact@v2
       with:
